--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -94,6 +94,11 @@ img{
     margin-top: 3%;
 }
 
+.signupView__Detail--data{
+    margin-bottom: 5px;
+    
+}
+
 .signupDetailbox{
     border-color: black;
     outline: none;
@@ -104,7 +109,7 @@ img{
     /* background-color: #7c7c7c7c; */
     padding: 0.3em 1em 0.3em 1.5em;
     width: 50%;
-    margin-bottom: 2%;
+    /* margin-bottom: 2%; */
 }
 
 .signupButtoCondtionform{
@@ -126,6 +131,8 @@ img{
 
     .signupText{
         grid-area: aggrementText;
+        margin-bottom: 20px;
+        padding-left: 5px;
     }
 }
 
@@ -133,15 +140,16 @@ img{
 .btn{
     border: none;
     /* margin-left: 0%; */
-    width: 90px;
-    height: 35px;
+    width: 110px;
+    height: 45px;
     color: white;
     background: black;
     border-radius: 13px;
-    font-weight: var(--fw-bold);
+    font-weight: var(--fw-reg);
     letter-spacing: 1px;
-
     transition: 500ms;
+    border-radius: 60px;
+    font-family: 'sfmy-regular',sans-serif;
 }
 
 .btn:hover{
@@ -154,4 +162,22 @@ img{
 
 .imglogo:hover{
     transform: scale(1.1);
+}
+
+.label{
+    padding-left: 5px;
+}
+
+.error_text{
+    color: red; 
+    font-size:16px;
+}
+
+.downloadLink{
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    text-decoration: underline;
+    /* clickable */
+    cursor: pointer;
 }
