--- a/public/css/mechanics/mechanicLandPage.css
+++ b/public/css/mechanics/mechanicLandPage.css
@@ -63,15 +63,15 @@ body{
 
 /* UPPER SECTION */
 .upper__section{
+
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
-    grid-template-areas: 
-        "two three four"
-    ;
-
+    grid-template-areas: "two three four";
     /* background-color: lightblue; */
-    margin: 0% 4%;
     margin-bottom: 1%;
+    margin-left: 3.6%;
+    margin-right: 4%;
+    margin-top: 5%;
 }
 
 /* card union property */
@@ -83,32 +83,6 @@ body{
     padding-bottom: 2rem;
     background-color: #D9D9D9;
 }
-/* 
-.upper__section--buttons{
-    grid-area: one; */
-
-    /* background-color: lightcoral */
-/* } */
-
-/* .admin--button{
-    display: inline-block;
-    width: 100%;
-    height: 4rem;
-    background: black;
-    color: white;
-    padding: .5em 1.5em;
-    text-decoration: none;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: var(--fw-bold);
-    border-radius: 5px;
-
-    transition: 500ms;
-
-    margin-bottom: 5px;
-    
-    font-family: var(--ff-family);
-} */
 
 .upper__section--reports{
     grid-area: two;
